welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:3: error: ')' expected but 'return' found.
      return true
      ^in3050:4: error: ';' expected but 'return' found.
  return false
  ^